changed dmc urls to cmc

--- a/newEquipmentpage/audiopage.html
+++ b/newEquipmentpage/audiopage.html
@@ -262,13 +262,13 @@
         <div class="cardTitle">
             Section
         </div>
-        <a href="https://bookit.dmc.jhu.edu/passes/audio">
+        <a href="https://bookit.cmc.jhu.edu/passes/audio">
             <div id="EquipmentBtn" class="cardSelect">
                 Equipment
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/equip_butt.png" width="25px" height="25px">
             </div>
         </a>
-        <a href="https://bookit.dmc.jhu.edu/passes/in-lab">
+        <a href="https://bookit.cmc.jhu.edu/passes/in-lab">
             <div id="ResourcesBtn" class="card">
                 In-Lab Resources
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/blackInlab.png" width="25px" height="25px">
@@ -280,43 +280,43 @@
         </div>
         <!-- **Category** + Cat = Audio Category = Audio Cat -->
         <div class="help">
-            <a href="https://bookit.dmc.jhu.edu/passes/audio">
+            <a href="https://bookit.cmc.jhu.edu/passes/audio">
                 <div id="AudioCat" class="cardSelect">
                     Audio
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/whitepoint.png">
                 </div>
             </a>
-            <a href="https://bookit.dmc.jhu.edu/passes/computing">
+            <a href="https://bookit.cmc.jhu.edu/passes/computing">
                 <div id="CompCat" class="card">
                     Computing
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/pointright.png">
                 </div>
             </a>
-            <a href="https://bookit.dmc.jhu.edu/passes/gaming">
+            <a href="https://bookit.cmc.jhu.edu/passes/gaming">
                 <div id="GamingCat" class="card">
                     Gaming
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/pointright.png">
                 </div>
             </a>
-            <a href="https://bookit.dmc.jhu.edu/passes/maker-diy">
+            <a href="https://bookit.cmc.jhu.edu/passes/maker-diy">
                 <div id="MakerCat" class="card">
                     Maker/DIY
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/pointright.png">
                 </div>
             </a>
-            <a href="https://bookit.dmc.jhu.edu/passes/photo">
+            <a href="https://bookit.cmc.jhu.edu/passes/photo">
                 <div id="PhotoCat" class="card">
                     Photo/Video
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/pointright.png">
                 </div>
             </a>
-            <a href="https://bookit.dmc.jhu.edu/passes/projector">
+            <a href="https://bookit.cmc.jhu.edu/passes/projector">
                 <div id="ProjectorCat" class="card">
                     Projectors
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/pointright.png">
                 </div>
             </a>
-            <a href="https://bookit.dmc.jhu.edu/passes/other">
+            <a href="https://bookit.cmc.jhu.edu/passes/other">
                 <div id="OtherCat" class="card">
                     Other
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/pointright.png">
@@ -332,7 +332,7 @@
         </div>
         <div class="spacer"></div>
         <div class="itemBox">
-            <a href="https://bookit.dmc.jhu.edu/reserve/Headphones">
+            <a href="https://bookit.cmc.jhu.edu/reserve/Headphones">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/Headphones_optimized_5000.jpg" />
             </a>
             <br>
@@ -341,7 +341,7 @@
             </div>
         </div>
         <div class="itemBox">
-            <a href="https://bookit.dmc.jhu.edu/reserve/AudioCables">
+            <a href="https://bookit.cmc.jhu.edu/reserve/AudioCables">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/cables.JPG" /> 
             </a>
             <br>
@@ -350,7 +350,7 @@
             </div>
         </div>
         <div class="itemBox">
-            <a href="https://bookit.dmc.jhu.edu/reserve/MicStands">
+            <a href="https://bookit.cmc.jhu.edu/reserve/MicStands">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/micStand1.JPG" />
             </a>
             <br>
@@ -359,7 +359,7 @@
             </div>
         </div>
         <div class="itemBox">
-            <a href="https://bookit.dmc.jhu.edu/reserve/Microphones">
+            <a href="https://bookit.cmc.jhu.edu/reserve/Microphones">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/mic1.JPG" /> 
             </a>
             <br>
@@ -368,7 +368,7 @@
             </div>
         </div>
         <div class="itemBox">
-            <a href="https://bookit.dmc.jhu.edu/reserve/MIDIControllers">
+            <a href="https://bookit.cmc.jhu.edu/reserve/MIDIControllers">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/midi.JPG" /> 
             </a>
             <br>
@@ -377,7 +377,7 @@
             </div>
         </div>
         <div class="itemBox">
-            <a href="https://bookit.dmc.jhu.edu/reserve/Mixers">
+            <a href="https://bookit.cmc.jhu.edu/reserve/Mixers">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/mixer.JPG" /> 
             </a>
             <br>
@@ -386,7 +386,7 @@
             </div>
         </div>
         <div class="itemBox">
-            <a href="https://bookit.dmc.jhu.edu/reserve/Speakers">
+            <a href="https://bookit.cmc.jhu.edu/reserve/Speakers">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/pasystem.JPG" /> 
             </a>
             <br>
@@ -395,7 +395,7 @@
             </div>
         </div>
         <div class="itemBox">
-            <a href="https://bookit.dmc.jhu.edu/reserve/AudioInterfaces">
+            <a href="https://bookit.cmc.jhu.edu/reserve/AudioInterfaces">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/recorder2.JPG" /> 
             </a>
             <br>
@@ -404,7 +404,7 @@
             </div>
         </div>
         <div class="itemBox">
-            <a href="https://bookit.dmc.jhu.edu/reserve/VideoProdAudioAccessories">
+            <a href="https://bookit.cmc.jhu.edu/reserve/VideoProdAudioAccessories">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/videoProd.JPG" /> 
             </a>
             <br>
