--- a/newHomepage/banner.html
+++ b/newHomepage/banner.html
@@ -280,14 +280,14 @@
                     <div class="main-cont">
                         <div class="banner">
                             <div class="two-main-butts-cont">
-                                <a href="https://bookit.dmc.jhu.edu/passes/equipment">
+                                <a href="https://bookit.cmc.jhu.edu/passes/equipment">
                                     <div class="two-main-butts">
                                         <img src="https://libapps.s3.amazonaws.com/customers/9396/images/equip_butt.png" />
                                         Equipment
                                     </div>
                                 </a>
 
-                                <a href="https://bookit.dmc.jhu.edu/passes/in-lab">
+                                <a href="https://bookit.cmc.jhu.edu/passes/in-lab">
                                     <div class="two-main-butts">
                                         <img src="https://libapps.s3.amazonaws.com/customers/9396/images/inlab_butt.png" />
                                         In-Lab Resources
@@ -310,14 +310,14 @@
                     <div class="main-cont">
                         <div class="banner">
                             <div class="two-main-butts-cont">
-                                <a href="https://bookit.dmc.jhu.edu/passes/equipment">
+                                <a href="https://bookit.cmc.jhu.edu/passes/equipment">
                                     <div class="two-main-butts">
                                         <img src="https://libapps.s3.amazonaws.com/customers/9396/images/equip_butt.png" />
                                         Equipment
                                     </div>
                                 </a>
 
-                                <a href="https://bookit.dmc.jhu.edu/passes/in-lab">
+                                <a href="https://bookit.cmc.jhu.edu/passes/in-lab">
                                     <div class="two-main-butts">
                                         <img src="https://libapps.s3.amazonaws.com/customers/9396/images/inlab_butt.png" />
                                         In-Lab Resources
@@ -340,14 +340,14 @@
                     <div class="main-cont">
                         <div class="banner">
                             <div class="two-main-butts-cont">
-                                <a href="https://bookit.dmc.jhu.edu/passes/equipment">
+                                <a href="https://bookit.cmc.jhu.edu/passes/equipment">
                                     <div class="two-main-butts">
                                         <img src="https://libapps.s3.amazonaws.com/customers/9396/images/equip_butt.png" />
                                         Equipment
                                     </div>
                                 </a>
 
-                                <a href="https://bookit.dmc.jhu.edu/passes/in-lab">
+                                <a href="https://bookit.cmc.jhu.edu/passes/in-lab">
                                     <div class="two-main-butts">
                                         <img src="https://libapps.s3.amazonaws.com/customers/9396/images/inlab_butt.png" />
                                         In-Lab Resources
