--- a/newHomepage/header.html
+++ b/newHomepage/header.html
@@ -175,18 +175,18 @@
         <div class="main-cont">
             <div class="menu-bar">
                 <div>
-                    <a href="https://bookit.dmc.jhu.edu/">
+                    <a href="https://bookit.cmc.jhu.edu/">
                         <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/Group_16.png">
                     </a>
                 </div>
                 <div class="links">
-                    <a id="first" href="https://bookit.dmc.jhu.edu/passes/first-time">
+                    <a id="first" href="https://bookit.cmc.jhu.edu/passes/first-time">
                         <div>First Time?</div>
                     </a>
-                    <a id="faq" href="https://bookit.dmc.jhu.edu/passes/faq">
+                    <a id="faq" href="https://bookit.cmc.jhu.edu/passes/faq">
                         <div>FAQ</div>
                     </a>
-                    <a id="calendar" href="https://bookit.dmc.jhu.edu/calendar?cid=21643">
+                    <a id="calendar" href="https://bookit.cmc.jhu.edu/calendar?cid=21643">
                         <div>Calendar</div>
                     </a>
                     
