--- a/newHomepage/header2.html
+++ b/newHomepage/header2.html
@@ -77,15 +77,15 @@
   
   <body>
     <div>
-        <a href="https://bookit.dmc.jhu.edu/">
+        <a href="https://bookit.cmc.jhu.edu/">
             <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/Group_16.png" alt="Logo">
         </a>
     </div>
     <div class="topnav" id="myTopnav">
       <a></a>
-      <a id="first" href="https://bookit.dmc.jhu.edu/passes/first-time">First Time?</a>
-      <a id="faq" href="https://bookit.dmc.jhu.edu/passes/faq">FAQ</a>
-      <a id="calendar" href="https://bookit.dmc.jhu.edu/calendar?cid=21643">Calendar</a>
+      <a id="first" href="https://bookit.cmc.jhu.edu/passes/first-time">First Time?</a>
+      <a id="faq" href="https://bookit.cmc.jhu.edu/passes/faq">FAQ</a>
+      <a id="calendar" href="https://bookit.cmc.jhu.edu/calendar?cid=21643">Calendar</a>
       <a href="javascript:void(0);" class="icon" onclick="toggleNav()">
         <i class="fa fa-bars"></i>
       </a>
