--- a/newInLabPages/inLabstartPage.html
+++ b/newInLabPages/inLabstartPage.html
@@ -254,13 +254,13 @@
         <div class="cardTitle">
             Section
         </div>
-        <a href="https://bookit.dmc.jhu.edu/passes/equipment">
+        <a href="https://bookit.cmc.jhu.edu/passes/equipment">
             <div id="EquipmentBtn" class="cardTop">
                 Equipment
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/blackEquip.png" width="25px" height="25px">
             </div>
         </a>
-        <a href="https://bookit.dmc.jhu.edu/passes/in-lab">
+        <a href="https://bookit.cmc.jhu.edu/passes/in-lab">
             <div id="ResourcesBtn" class="cardSelect">
                 In-Lab Resources
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/inlab_butt.png" width="25px" height="25px">
@@ -275,7 +275,7 @@
             In-Lab Resources
         </div>
         <div class="itemBox">
-            <a href="https://bookit.dmc.jhu.edu/reserve/3DPrinters">
+            <a href="https://bookit.cmc.jhu.edu/reserve/3DPrinters">
                 <img src="https://libapps.s3.amazonaws.com/customers/9396/images/gridicon_3DPrinters.png" />
             </a>
             <br>
@@ -284,7 +284,7 @@
             </div>
         </div>
         <div class="itemBox">
-            <a href="https://bookit.dmc.jhu.edu/reserve/AudioStudio">
+            <a href="https://bookit.cmc.jhu.edu/reserve/AudioStudio">
                 <img src="https://libapps.s3.amazonaws.com/customers/9396/images/gridicon_AudioStudio.png" /> 
             </a>
             <br>
@@ -293,7 +293,7 @@
             </div>
         </div>
         <div class="itemBox">
-            <a href="https://bookit.dmc.jhu.edu/reserve/InLabComputers">
+            <a href="https://bookit.cmc.jhu.edu/reserve/InLabComputers">
                 <img src="https://libapps.s3.amazonaws.com/customers/9396/images/gridicon_InLabComputers.png" />
             </a>
             <br>
@@ -302,7 +302,7 @@
             </div>
         </div>
         <div class="itemBox">
-            <a href="https://bookit.dmc.jhu.edu/reserve/ProjectSpace">
+            <a href="https://bookit.cmc.jhu.edu/reserve/ProjectSpace">
                 <img src="https://libapps.s3.amazonaws.com/customers/9396/images/gridicon_ProjectSpace.png" /> 
             </a>
             <br>
@@ -311,7 +311,7 @@
             </div>
         </div>
         <div class="itemBox">
-            <a href="https://bookit.dmc.jhu.edu/reserve/VRStudio">
+            <a href="https://bookit.cmc.jhu.edu/reserve/VRStudio">
                 <img src="https://libapps.s3.amazonaws.com/customers/9396/images/gridicon_VRStudio.png" /> 
             </a>
             <br>
@@ -320,7 +320,7 @@
             </div>
         </div>
         <div class="itemBox">
-            <a href="https://bookit.dmc.jhu.edu/reserve/GamingPCs">
+            <a href="https://bookit.cmc.jhu.edu/reserve/GamingPCs">
                 <img src="https://libapps.s3.amazonaws.com/customers/9396/images/gridicon_GamingPCs.png" /> 
             </a>
             <br>
@@ -329,7 +329,7 @@
             </div>
         </div>
         <div class="itemBox">
-            <a href="https://bookit.dmc.jhu.edu/reserve/Printers">
+            <a href="https://bookit.cmc.jhu.edu/reserve/Printers">
                 <img src="https://libapps.s3.amazonaws.com/customers/9396/images/gridicon_Printers.png" /> 
             </a>
             <br>
