--- a/masonCS.html
+++ b/masonCS.html
@@ -337,7 +337,7 @@ if(/^https:\/\/bookit\.dmc\.jhu\.edu\/equipment\/item\//.test(window.location.hr
 // Script to automatically collapse the "Other items in this category" section
 // on equipment item pages when the page loads.
 
-// If on an equipment item page (URL="https://bookit.dmc.jhu.edu/equipment/item/...")
+// If on an equipment item page (URL="https://bookit.cmc.jhu.edu/equipment/item/...")
 if (/https:\/\/bookit\.dmc\.jhu\.edu\/equipment\/item\/.?/.test(window.location.href)) {
     console.log("Auto Collapse Other Items: On equipment item page")
     // On page load, call collapseOtherItems() function
@@ -509,8 +509,8 @@ if (
 // Description: JS script to hide/show equipment grid items on the homepage
 // Author: Mason Gareis (mason.gareis@gmail.com)
 
-// Only run the code on the homepage (https://bookit.dmc.jhu.edu/)
-if (window.location.origin + window.location.pathname === "https://bookit.dmc.jhu.edu/") {
+// Only run the code on the homepage (https://bookit.cmc.jhu.edu/)
+if (window.location.origin + window.location.pathname === "https://bookit.cmc.jhu.edu/") {
 
     // Global color varibles
     var equipBGColor = "#f8c3d5";
