--- a/newEquipmentpage/equipment.html
+++ b/newEquipmentpage/equipment.html
@@ -201,13 +201,13 @@
             Section
         </div>
         <div class="help">
-            <a href="https://bookit.dmc.jhu.edu/passes/audio">
+            <a href="https://bookit.cmc.jhu.edu/passes/audio">
                 <div id="EquipmentBtn" class="cardTop">
                     Equipment
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/blackEquip.png" width="25px" height="25px">
                 </div>
             </a>
-            <a href="https://bookit.dmc.jhu.edu/passes/in-lab">
+            <a href="https://bookit.cmc.jhu.edu/passes/in-lab">
                 <div id="ResourcesBtn" class="card">
                     In-Lab Resources
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/blackInlab.png" width="25px" height="25px">
@@ -220,43 +220,43 @@
         </div>
         <!-- **Category** + Cat = Audio Category = Audio Cat -->
         <div class="help">
-            <a href="https://bookit.dmc.jhu.edu/passes/audio">
+            <a href="https://bookit.cmc.jhu.edu/passes/audio">
                 <div id="AudioCat" class="cardTop">
                     Audio
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/pointright.png">
                 </div>
             </a>
-            <a href="https://bookit.dmc.jhu.edu/passes/computing">
+            <a href="https://bookit.cmc.jhu.edu/passes/computing">
                 <div id="CompCat" class="card">
                     Computing
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/pointright.png">
                 </div>
             </a>
-            <a href="https://bookit.dmc.jhu.edu/passes/gaming">
+            <a href="https://bookit.cmc.jhu.edu/passes/gaming">
                 <div id="GamingCat" class="card">
                     Gaming
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/pointright.png">
                 </div>
             </a>
-            <a href="https://bookit.dmc.jhu.edu/passes/maker-diy">
+            <a href="https://bookit.cmc.jhu.edu/passes/maker-diy">
                 <div id="MakerCat" class="card">
                     Maker/DIY
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/pointright.png">
                 </div>
             </a>
-            <a href="https://bookit.dmc.jhu.edu/passes/photo">
+            <a href="https://bookit.cmc.jhu.edu/passes/photo">
                 <div id="PhotoCat" class="card">
                     Photo/Video
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/pointright.png">
                 </div>
             </a>
-            <a href="https://bookit.dmc.jhu.edu/passes/projector">
+            <a href="https://bookit.cmc.jhu.edu/passes/projector">
                 <div id="ProjectorCat" class="card">
                     Projectors
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/pointright.png">
                 </div>
             </a>
-            <a href="https://bookit.dmc.jhu.edu/passes/other">
+            <a href="https://bookit.cmc.jhu.edu/passes/other">
                 <div id="OtherCat" class="card">
                     Other
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/pointright.png">
