--- a/newEquipmentpage/makerPage.html
+++ b/newEquipmentpage/makerPage.html
@@ -242,13 +242,13 @@
         <div class="cardTitle">
             Section
         </div>
-        <a href="https://bookit.dmc.jhu.edu/passes/audio">
+        <a href="https://bookit.cmc.jhu.edu/passes/audio">
             <div id="EquipmentBtn" class="cardSelect">
                 Equipment
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/equip_butt.png" width="25px" height="25px">
             </div>
         </a>
-        <a href="https://bookit.dmc.jhu.edu/passes/in-lab">
+        <a href="https://bookit.cmc.jhu.edu/passes/in-lab">
             <div id="ResourcesBtn" class="card">
                 In-Lab Resources
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/blackInlab.png" width="25px" height="25px">
@@ -260,43 +260,43 @@
         </div>
         <!-- **Category** + Cat = Audio Category = Audio Cat -->
         <div class="help">
-            <a href="https://bookit.dmc.jhu.edu/passes/audio">
+            <a href="https://bookit.cmc.jhu.edu/passes/audio">
                 <div id="AudioCat" class="cardTop">
                     Audio
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/pointright.png">
                 </div>
             </a>
-            <a href="https://bookit.dmc.jhu.edu/passes/computing">
+            <a href="https://bookit.cmc.jhu.edu/passes/computing">
                 <div id="CompCat" class="card">
                     Computing
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/pointright.png">
                 </div>
             </a>
-            <a href="https://bookit.dmc.jhu.edu/passes/gaming">
+            <a href="https://bookit.cmc.jhu.edu/passes/gaming">
                 <div id="GamingCat" class="card">
                     Gaming
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/pointright.png">
                 </div>
             </a>
-            <a href="https://bookit.dmc.jhu.edu/passes/maker-diy">
+            <a href="https://bookit.cmc.jhu.edu/passes/maker-diy">
                 <div id="MakerCat" class="cardSelect">
                     Maker/DIY
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/whitepoint.png">
                 </div>
             </a>
-            <a href="https://bookit.dmc.jhu.edu/passes/photo">
+            <a href="https://bookit.cmc.jhu.edu/passes/photo">
                 <div id="PhotoCat" class="card">
                     Photo/Video
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/pointright.png">
                 </div>
             </a>
-            <a href="https://bookit.dmc.jhu.edu/passes/projector">
+            <a href="https://bookit.cmc.jhu.edu/passes/projector">
                 <div id="ProjectorCat" class="card">
                     Projectors
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/pointright.png">
                 </div>
             </a>
-            <a href="https://bookit.dmc.jhu.edu/passes/other">
+            <a href="https://bookit.cmc.jhu.edu/passes/other">
                 <div id="OtherCat" class="card">
                     Other
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/pointright.png">
@@ -312,7 +312,7 @@
             Maker/DIY Equipment
         </div>
         <div class="itemBox">
-            <a href="https://bookit.dmc.jhu.edu/reserve/ButtonMakers">
+            <a href="https://bookit.cmc.jhu.edu/reserve/ButtonMakers">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/button.JPG" /> 
             </a>
             <br>
@@ -321,7 +321,7 @@
             </div>
         </div>
         <!-- <div class="itemBox">
-            <a href="https://bookit.dmc.jhu.edu/reserve/Microprocessors">
+            <a href="https://bookit.cmc.jhu.edu/reserve/Microprocessors">
                 <img src="https://libapps.s3.amazonaws.com/customers/9396/images/gridicon_Microprocessors.png" /> 
             </a>
             <br>
@@ -330,7 +330,7 @@
             </div>
         </div> -->
         <div class="itemBox">
-            <a href="https://bookit.dmc.jhu.edu/reserve/Sewing">
+            <a href="https://bookit.cmc.jhu.edu/reserve/Sewing">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/sewing.JPG" /> 
             </a>
             <br>
@@ -339,7 +339,7 @@
             </div>
         </div>
         <div class="itemBox">
-            <a href="https://bookit.dmc.jhu.edu/reserve/Tools">
+            <a href="https://bookit.cmc.jhu.edu/reserve/Tools">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/tools.JPG" /> 
             </a>
             <br>
