--- a/newEquipmentpage/otherPage.html
+++ b/newEquipmentpage/otherPage.html
@@ -240,13 +240,13 @@
         <div class="cardTitle">
             Section
         </div>
-        <a href="https://bookit.dmc.jhu.edu/passes/audio">
+        <a href="https://bookit.cmc.jhu.edu/passes/audio">
             <div id="EquipmentBtn" class="cardSelect">
                 Equipment
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/equip_butt.png" width="25px" height="25px">
             </div>
         </a>
-        <a href="https://bookit.dmc.jhu.edu/passes/in-lab">
+        <a href="https://bookit.cmc.jhu.edu/passes/in-lab">
             <div id="ResourcesBtn" class="card">
                 In-Lab Resources
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/blackInlab.png" width="25px" height="25px">
@@ -258,43 +258,43 @@
         </div>
         <!-- **Category** + Cat = Audio Category = Audio Cat -->
         <div class="help">
-            <a href="https://bookit.dmc.jhu.edu/passes/audio">
+            <a href="https://bookit.cmc.jhu.edu/passes/audio">
                 <div id="AudioCat" class="cardTop">
                     Audio
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/pointright.png">
                 </div>
             </a>
-            <a href="https://bookit.dmc.jhu.edu/passes/computing">
+            <a href="https://bookit.cmc.jhu.edu/passes/computing">
                 <div id="CompCat" class="card">
                     Computing
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/pointright.png">
                 </div>
             </a>
-            <a href="https://bookit.dmc.jhu.edu/passes/gaming">
+            <a href="https://bookit.cmc.jhu.edu/passes/gaming">
                 <div id="GamingCat" class="card">
                     Gaming
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/pointright.png">
                 </div>
             </a>
-            <a href="https://bookit.dmc.jhu.edu/passes/maker-diy">
+            <a href="https://bookit.cmc.jhu.edu/passes/maker-diy">
                 <div id="MakerCat" class="card">
                     Maker/DIY
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/pointright.png">
                 </div>
             </a>
-            <a href="https://bookit.dmc.jhu.edu/passes/photo">
+            <a href="https://bookit.cmc.jhu.edu/passes/photo">
                 <div id="PhotoCat" class="card">
                     Photo/Video
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/pointright.png">
                 </div>
             </a>
-            <a href="https://bookit.dmc.jhu.edu/passes/projector">
+            <a href="https://bookit.cmc.jhu.edu/passes/projector">
                 <div id="ProjectorCat" class="card">
                     Projectors
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/pointright.png">
                 </div>
             </a>
-            <a href="https://bookit.dmc.jhu.edu/passes/other">
+            <a href="https://bookit.cmc.jhu.edu/passes/other">
                 <div id="OtherCat" class="cardSelect">
                     Other
                     <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/whitepoint.png">
@@ -310,7 +310,7 @@
             Other Resources
         </div>
         <div class="itemBox">
-            <a href="https://bookit.dmc.jhu.edu/reserve/Bags">
+            <a href="https://bookit.cmc.jhu.edu/reserve/Bags">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/posterTube.JPG" /> 
             </a>
             <br>
@@ -319,7 +319,7 @@
             </div>
         </div>
         <div class="itemBox">
-            <a href="https://bookit.dmc.jhu.edu/reserve/ACPowerCables">
+            <a href="https://bookit.cmc.jhu.edu/reserve/ACPowerCables">
                 <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/extenstion.JPG" /> 
             </a>
             <br>
