--- a/page.html
+++ b/page.html
@@ -432,7 +432,7 @@
         // Script to automatically collapse the "Other items in this category" section
         // on equipment item pages when the page loads.
 
-        // If on an equipment item page (URL="https://bookit.dmc.jhu.edu/equipment/item/...")
+        // If on an equipment item page (URL="https://bookit.cmc.jhu.edu/equipment/item/...")
         if (/https:\/\/bookit\.dmc\.jhu\.edu\/equipment\/item\/.?/.test(window.location.href)) {
             console.log("Auto Collapse Other Items: On equipment item page")
             // On page load, call collapseOtherItems() function
@@ -605,8 +605,8 @@
         // Description: JS script to hide/show equipment grid items on the homepage
         // Author: Mason Gareis (mason.gareis@gmail.com)
 
-        // Only run the code on the homepage (https://bookit.dmc.jhu.edu/)
-        if (window.location.origin + window.location.pathname === "https://bookit.dmc.jhu.edu/") {
+        // Only run the code on the homepage (https://bookit.cmc.jhu.edu/)
+        if (window.location.origin + window.location.pathname === "https://bookit.cmc.jhu.edu/") {
 
             // Global color varibles
             var equipBGColor = "#f8c3d5";
@@ -1703,7 +1703,7 @@
 
     <div id="s-lc-public-cust-header" role="banner">
         <div id="custom-header">
-            <a href="https://bookit.dmc.jhu.edu/">
+            <a href="https://bookit.cmc.jhu.edu/">
                 <div id="header-row">
                     <div id="discover-dmc"><img
                             src="https://libapps.s3.amazonaws.com/customers/9396/images/discover_DMC.png"></div>
@@ -1723,7 +1723,7 @@
                     <ol class="breadcrumb">
                         <li><a href="https://jhu-dmc.libcal.com">JHU Digital Media Center</a></li>
 
-                        <li class="s-lc-desktop-only"><a href="https://bookit.dmc.jhu.edu">BookIt</a></li>
+                        <li class="s-lc-desktop-only"><a href="https://bookit.cmc.jhu.edu">BookIt</a></li>
 
 
                         <li class="active s-lc-desktop-only">Equipment Catalog</li>
